Created new file

--- a/speedtest.ipynb
+++ b/speedtest.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "adaac9c9-d4ee-453c-a0a5-f17a73334fc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.233154296875 :- This is time taken to compile the code using python list\n"
+     ]
+    }
+   ],
    "source": [
     "# using python lists\n",
     "\n",
@@ -28,10 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "664be535-0ffc-4b05-aabc-868c26ffb23f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5514006614685059 :- This is time taken to compile the code using numpy arrays\n"
+     ]
+    }
+   ],
    "source": [
     "# using numpy arrays\n",
     "\n",
@@ -39,7 +55,7 @@
     "import time\n",
     "\n",
     "\n",
-    "size = 10_00_000_0\n",
+    "size = 10_00_000\n",
     "\n",
     "l1 =  np.array(list(range(size)))\n",
     "l2 =  np.array(list(range(size)))\n",
